--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="header">
           <!-- Left part -->
           <div class="left">
-            <img src="img/logo.png" alt="logo" class="logo">
+            <img src="img/logo.PNG" alt="logo" class="logo">
           </div>
 
           <!-- Right part -->
